:lipstick: fix: spacing and header size

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -110,3 +110,17 @@ p, span {
         display: none !important;
     }
 }
+
+@media screen and (max-width: 767px) {
+    h1 {
+        font-size: 32px;
+    }
+    
+    h2 {
+        font-size: 28px;
+    }
+    
+    h3 {
+        font-size: 24px;
+    }      
+}
